Add searchable reference pickers
